--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <title>Assignment 1</title>
     </head>
     <body>
-        Hello world!
+        <h1>Hello. My name is Kim minjae.</h1>
+
+        <p>Here are the websites I frequently use to watch movies.</p>
+
+        <ul>
+            <li><a href = "https://www.netflix.com"> Netflix </a></li>
+            <li><a href = "https://www.disneyplus.com"> Disneyplus</a></li>
+            <li><a href = "https://www.imdb.com"> IMDB </a></li>
+        </ul>
+
+
     </body>
 </html>
