--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Assignment 1</title>
+        <style type = "text/css">
+            .text { font-size: 14pt}
+        </style>
     </head>
     <body>
         <h1>Hello. My name is Kim minjae.</h1>
+        <h2>This website is a page where I introduce my favorite movies. Here are the top 3 movies I recommend.</h2>
 
-        <p>Here are the websites I frequently use to watch movies.</p>
+        <p class = text> Here are the websites I frequently use to watch movies. You can click the text to access them.</p>
 
         <ul>
             <li><a href = "https://www.netflix.com"> Netflix </a></li>
@@ -15,6 +19,47 @@
             <li><a href = "https://www.imdb.com"> IMDB </a></li>
         </ul>
 
+        <table border="1">
+            <caption><strong>Table1.my favorite 3 movies</strong></caption>
+            <thead>
+                <!--row 1-->
+                <tr>
+                    <th rowspan="2">
+                        Rank
+                    </th>
+                    <th colspan="3">
+                        Information about movies
+                    </th>
+                </tr>
+                <!--row 2-->
+                <tr>
+                    <td>Title</td>
+                    <td>Poster</td>
+                    <td>tagline</td>
+                </tr>
+                <!--row 3-->
+                <tr>
+                    <td>1</td>
+                    <td>The Shawshank Redemption</td>
+                    <td>http://image.tmdb.org/t/p/w185/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg</td>
+                    <td>Fear can hold you prisoner. Hope can set you free.</td>
+                </tr>
+                <!--row 4-->
+                <tr>
+                    <td>2</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <!--row 5-->
+                <tr>
+                    <td>3</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </thead>
+        </table>
 
     </body>
 </html>
