Complete table contents like title of movie, image files and tagline.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Assignment 1</title>
         <style type = "text/css">
-            .text { font-size: 14pt}
+            .text { font-size: 14pt }
         </style>
     </head>
     <body>
@@ -41,25 +41,24 @@
                 <tr>
                     <td>1</td>
                     <td>The Shawshank Redemption</td>
-                    <td>http://image.tmdb.org/t/p/w185/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg</td>
+                    <td><img src = "theShawshankRedemption.jpg" width="200" height="300" alt = "Poster1"></td>
                     <td>Fear can hold you prisoner. Hope can set you free.</td>
                 </tr>
                 <!--row 4-->
                 <tr>
                     <td>2</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Forrest Gump</td>
+                    <td><img src = "ForrestGump.jpg" width = "200" height = "300" alt = "Poster2"></td>
+                    <td>The world will never be the same, once you've seen it through the eyes of Forrest Gump.</td>
                 </tr>
                 <!--row 5-->
                 <tr>
                     <td>3</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Interstellar</td>
+                    <td><img src="Interstella.jpg" width="200" height="300" alt="Poster3"></td>
+                    <td>Mankind was born on Earth. It was never meant to die here.</td>
                 </tr>
             </thead>
         </table>
-
     </body>
 </html>
